test/resources/typer/failing/OperatorError3.scala
object OperatorError {
    val str: String = !true;
    str
}
